--- a/src/pages/Stylepages/Apropos.scss
+++ b/src/pages/Stylepages/Apropos.scss
@@ -103,11 +103,19 @@
     box-sizing: border-box;
     width: 100%;
 
+
     @media (min-width:1024px) {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 0;
         align-items: baseline;
+    }
+
+    .hobbie-align {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
     }
 
     .hobbie-content {
@@ -116,6 +124,8 @@
         align-items: center;
         gap: 20px;
         width: 100%;
+        margin-bottom: 30px;
+
 
         @media (min-width:1024px) {
             row-gap: 20px;
@@ -137,6 +147,7 @@
             @media (min-width:1024px) {
                 text-align: left;
                 margin: 0 auto;
+                text-align: justify;
             }
 
             @media (min-width:1440px) {
@@ -153,17 +164,21 @@
     .second {
         width: 100%;
         box-sizing: border-box;
-        padding-top: 90px;
-        padding-bottom: 90px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        border-radius: 20px;
+        margin-left: 30px;
+        margin-right: 30px;
+        box-shadow: 3px 3px 12px #ccc9c9c9;
 
         @media (min-width:1024px) {
-            width: 25%;
+            width: 30%;
             padding-bottom: 0px;
-            min-height: 895px;
+            min-height: 540px;
         }
 
         @media (min-width:1440px) {
-            min-height: 778px;
+            min-height: 540px;
         }
     }
 
