--- a/src/pages/Stylepages/Projects.scss
+++ b/src/pages/Stylepages/Projects.scss
@@ -3,6 +3,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
+.Carousel-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
+    img {
+        width: 800px;
+        height: 400px;
+    }
 }
