--- a/src/pages/Stylepages/Projects.scss
+++ b/src/pages/Stylepages/Projects.scss
@@ -12,7 +12,7 @@
     justify-content: center;
 
     img {
-        width: 800px;
-        height: 400px;
+        width: 100%;
+        height: 450px;
     }
 }
